--- a/game/static/style.css
+++ b/game/static/style.css
@@ -3,7 +3,23 @@
 	src: url('fonts/HappyLittleDinosaurs-regular.otf');
 }
 
+html {
+	background-color: #24141f;
+}
+
 body {
 	font-family: "Happy Little Dinosaur Font", sans-serif;
 	font-size: xx-large;
+}
+
+.background {
+	min-width: 1024px;
+	/* min-height: 100%; */
+
+	width: 100%;
+	height: auto;
+
+	position: fixed;
+		top: 0;
+		left: 0;
 }
