--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <title>{% block title %}{% endblock %} - Flaskr</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="{{ url_for('static',
+			    filename='scripts.js') }}"></script>
 <section class="content">
+
+	Width <span id="width"></span><br>
+	Height <span id="height"></span><br>
 	{% block content %}{% endblock %}
 </section>
