Again fixing the thin -> tall change because I am a potato

--- a/game/templates/home_page.html
+++ b/game/templates/home_page.html
@@ -10,7 +10,7 @@
 			 class="background_wide" >
 		<img src="{{ url_for('static',
 				  filename='images/background/title_tall.jpg') }}"
-			 id="mainpage_thin"
+			 id="mainpage_tall"
 			 alt="Main Image - stego with meotrites"
 			 class="background_tall hidden">
 		<h1 class="title_text tt_1_wide"
