--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -4,6 +4,19 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="{{ url_for('static',
 			    filename='scripts.js') }}"></script>
+<!-- The Navigation Bar -->
+<nav>
+	<ul class="nav_content_overall">
+		<li class="nav_content">Rules</li>
+		<li class="nav_content">Game</li>
+		<li class="nav_content nav_logo">
+			happy little <br> DINOSAURS 
+		</li>
+		<li class="nav_content">About Website</li>
+		<li class="nav_content">About Happy Little Dinosaurs</li>
+	</ul>
+</nav>
+<!-- Empty section to populate the content of each page -->
 <section class="content">
 	{% block content %}{% endblock %}
 </section>
