--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -13,7 +13,7 @@
 			happy little <br> DINOSAURS 
 		</li>
 		<li class="nav_content">About Website</li>
-		<li class="nav_content">About Happy Little Dinosaurs</li>
+		<li class="nav_content">Buy a Copy</li>
 	</ul>
 </nav>
 <!-- Empty section to populate the content of each page -->
