--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Flaskr</title>
+<title>{% block title %}{% endblock %}Happy Little Dinosaurs</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="{{ url_for('static',
 			    filename='scripts.js') }}"></script>
+
 <!-- The Navigation Bar -->
 <nav>
 	<ul class="nav_content_overall">
