Adding links to the nav bar.

--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -8,10 +8,15 @@
 <!-- The Navigation Bar -->
 <nav>
 	<ul class="nav_content_overall">
-		<li class="nav_content">Rules</li>
+		<li class="nav_content">
+			<a class="nav_link" href="/rules">
+				Rules </a> 
+		</li>
 		<li class="nav_content">Game</li>
 		<li class="nav_content nav_logo">
+			<a class="nav_link" href="/">
 			happy little <br> DINOSAURS 
+			</a>
 		</li>
 		<li class="nav_content">About Website</li>
 		<li class="nav_content">Buy a Copy</li>
@@ -19,5 +24,7 @@
 </nav>
 <!-- Empty section to populate the content of each page -->
 <section class="content">
+<body>
 	{% block content %}{% endblock %}
+</body>
 </section>
