Added very basic game start page

--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -12,7 +12,10 @@
 			<a class="nav_link" href="/rules">
 				Rules </a> 
 		</li>
-		<li class="nav_content">Game</li>
+		<li class="nav_content">
+			<a class="nav_link" href="/game">
+				Game </a>
+		</li>
 		<li class="nav_content nav_logo">
 			<a class="nav_link" href="/">
 			happy little <br> DINOSAURS 
