--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -2,10 +2,8 @@
 <title>{% block title %}{% endblock %}Happy Little Dinosaurs</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 TODO: restructure this to be better.
-<script src="{{ url_for('static', filename='require.js') }}"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+<script type="text/javascript" src="//cdn.socket.io/4.4.1/socket.io.min.js"></script>
 <script src="{{ url_for('static',
 			    filename='scripts.js') }}"></script>
 <script src="{{ url_for('static',
