Start game can now move to the waiting room successfully!

--- a/game/templates/game_menu.html
+++ b/game/templates/game_menu.html
@@ -5,5 +5,5 @@
 </form>
 <form method="post" class="game_start">
 	<input type="submit" name="join_game" value="Join an Existing Game">
-</form
+</form>
 {% endblock %}
