Moved the logic to starting a socket on the client side whenever "game" is navigated to. I'm not convinced this is best but we'll see.

--- a/game/templates/game_menu.html
+++ b/game/templates/game_menu.html
@@ -6,4 +6,5 @@
 <form method="post" class="game_start">
 	<input type="submit" name="join_game" value="Join an Existing Game">
 </form>
+<script src="{{ url_for('static', filename='game_socket_handler.js') }}"></script>
 {% endblock %}
