--- a/game/templates/game_start_new.html
+++ b/game/templates/game_start_new.html
@@ -4,14 +4,7 @@ Start a new game!
 <!--
 TODO: include configuration options
 -->
-<form method="post" class="game_start">
+<form method="post" id="form_start_new_game" class="game_start">
 	<input type="submit" value="Start a new game">
 </form>
-<!--
-This is where the script needs to go. I'm not sure of the nicest way to structure this.
--->
-<!--
-<script src="{{ url_for('static',
-			 	filename='game_socket_handler.js') }}"></script>
--->
 {% endblock %}
