--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -5,9 +5,8 @@
 TODO: restructure this to be better.
 -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script type="text/javascript" src="//cdn.socket.io/4.4.1/socket.io.min.js"></script>
-<script src="{{ url_for('static',
-			    filename='scripts.js') }}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js"></script>
+<script src="{{ url_for('static', filename='scripts.js') }}"></script>
 
 <!-- The Navigation Bar -->
 <nav>
