Added a waiting room that contains a game ID.

--- a/game/templates/game_start_new.html
+++ b/game/templates/game_start_new.html
@@ -7,4 +7,5 @@ TODO: include configuration options
 <form method="post" id="form_start_new_game" class="game_start">
 	<input type="submit" value="Start a new game">
 </form>
+<script src="{{url_for('static', filename='create_room_handler.js') }}"></script>
 {% endblock %}
